# XellGrid

./: .flake8  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tsconfig.json  webpack.config.js
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
js/: MANIFEST.in  README.md  Untitled.ipynb  Untitled5.ipynb  install.json  package-lock.json  package.json  pyproject.toml  qgrid.css  setup.py  tsconfig.json  webpack.config.js
js/src/: embed.ts  index.ts  menu.css  qgrid.booleanfilter.js  qgrid.datefilter.js  qgrid.editors.js  qgrid.filterbase.js  qgrid.sliderfilter.js  qgrid.textfilter.js  qgrid.widget.js  xellgrid.booleanfilter.js  xellgrid.filterbase.js  xellgrid.sliderfilter.js  xellgrid.textfilter.js  xellgrid.widget.js
qgrid/: Untitled.ipynb  Untitled1.ipynb  __init__.py  grid.py  grid_default_settings.py  grid_display_options.py  grid_event_handlers.py
qgrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qgrid/static/: index.js  index.js.map
qgrid/tests/: test_grid_modin.py  test_grid_pandas.py
schema/: xellgrid.json
src/: cell_adapter.ts  embed.ts  extension.js  extension.ts  index.ts  xellgrid.booleanfilter.ts  xellgrid.css  xellgrid.datefilter.js  xellgrid.datefilter.ts  xellgrid.editors.ts  xellgrid.filterbase.js  xellgrid.filterbase.ts  xellgrid.slickgrid.ts  xellgrid.sliderfilter.ts  xellgrid.textfilter.ts  xellgrid.widget.ts
types/slickgrid/: README.md  index.d.ts  package.json
xellgrid/: __init__.py  _version.py  grid.py  grid_default_settings.py  grid_display_options.py  grid_event_handlers.py  grid_utils.py  xell_tabs.py
xellgrid/common/: dataframe_utils.py  xellgrid_constants.py
xellgrid/data_model/: core_dataset.py  render_dataset.py  xell_grid.py
xellgrid/grid_row_operations/: add_rows.py
xellgrid/static/: index.js  index.js.map
xellgrid/tests/: conftest.py  test_add_rows.py  test_grid.py  test_grid_default_settings.py  test_grid_display_options.py  test_grid_event_handlers.py  test_grid_pandas.py  test_xell_tabs.py
xellgrid/tests/common/: test_dataframe_utils.py
