[build-system]
requires = [
    "hatchling",
    "jupyterlab>=3.1",
]
build-backend = "hatchling.build"

[project]
name = "xellgrid"
description = "An Interactive Grid for Sorting and Filtering DataFrames in Jupyter Notebook"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "XellGrid", email = "some@some.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "IPython",
    "ipywidgets>=7.0.0",
    "mock",
    "modin",
    "notebook>=4.0.0",
    "numpy",
    "pandas>=0.18.0",
    "pytest",
    "six",
    "traitlets",
]
version = "1.1.3"
[project.license]
file = "LICENSE"

[project.urls]
Homepage = "Doesnot exist"

[tool.hatch.build]
artifacts = [
    "xellgrid/labextension",
    "xellgrid/.ipynb_checkpoints",
    "xellgrid/dask-worker-space",
    "xellgrid/static",
    "xellgrid.egg-info",
]

[tool.hatch.build.targets.wheel.shared-data]
"xellgrid/labextension/static" = "share/jupyter/labextensions/xellgrid/static"
"install.json" = "share/jupyter/labextensions/xellgrid/install.json"
"xellgrid/labextension/build_log.json" = "share/jupyter/labextensions/xellgrid/build_log.json"
"xellgrid/labextension/package.json" = "share/jupyter/labextensions/xellgrid/package.json"
"xellgrid/labextension/schemas/xellgrid" = "share/jupyter/labextensions/xellgrid/schemas/xellgrid"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "xellgrid/labextension/static/style.js",
    "xellgrid/labextension/package.json",
]
skip-if-exists = [
    "xellgrid/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "xellgrid/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "1.1.3"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "xellgrid/_version.py"
