[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab>=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["xellgrid2/labextension/static/style.js"]
ensured-targets = ["xellgrid2/labextension/static/style.js", "xellgrid2/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["xellgrid2/labextension/**", "yarn.lock", ".*", "package-lock.json"]
